--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
        =============================== */
     const ALLOWED_EMAILS = new Set([
       "prism.shahriar@gmail.com",
-      "msmahmud@iastate.edu",
-      // "prism.nadia@gmail.com"
+      // "friend@example.com",
     ]);
 
     /* ===============================
