--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        =============================== */
     const ALLOWED_EMAILS = new Set([
       "prism.shahriar@gmail.com",
-      // "friend@example.com",
+      "prism.nadia@gmail.com",
     ]);
 
     /* ===============================
