--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
     /* ===============================
        2) FIREBASE IMPORTS
        =============================== */
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
     import {
       getAuth,
       GoogleAuthProvider,
@@ -62,7 +61,9 @@
       isSignInWithEmailLink,
       signInWithEmailLink,
       onAuthStateChanged,
-      signOut
+      signOut,
+      setPersistence,
+      browserSessionPersistence
     } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
 
     /* ===============================
@@ -79,6 +80,7 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    await setPersistence(auth, browserSessionPersistence);
     const provider = new GoogleAuthProvider();
 
     /* ===============================
