--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     /* ===============================
        2) FIREBASE IMPORTS
        =============================== */
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
     import {
       getAuth,
       GoogleAuthProvider,
